# walker_simulator

./: README.md
devel/: .catkin  _setup_util.py
devel/lib/pkgconfig/: walker_control.pc  walker_description.pc  walker_gazebo.pc
devel/share/walker_control/cmake/: walker_controlConfig.cmake
devel/share/walker_description/cmake/: walker_descriptionConfig.cmake
devel/share/walker_gazebo/cmake/: walker_gazeboConfig.cmake
src/: README.md
src/walker_control/: CMakeLists.txt  package.xml
src/walker_control/config/: walker_control.yaml
src/walker_control/launch/: walker_control.launch  walker_rqt.launch  walker_rqt.perspective
src/walker_control/src/: CMakeLists.txt  README.md  publisher.cpp  publisher_random.cpp
src/walker_control/src/include/boost/: token_functions.hpp  token_iterator.hpp  tokenizer.hpp
src/walker_control/src/trajectories/: trajectory.csv
src/walker_control/src/util/: CMakeLists.txt  read_trajectory.cpp  read_trajectory.h
src/walker_description/: CMakeLists.txt
src/walker_description/launch/: walker.rviz  walker_rviz.launch
src/walker_description/meshes/collision/: body_collision.stl  body_collision_old.stl  carriage_collision.stl  left_hip_collision.stl  leg_collision.stl  right_hip_collision.stl
src/walker_description/meshes/visual/: left_carriage.stl  (+3 more)
src/walker_description/urdf/: gazebo_specific.gazebo  joint_descriptions.xacro  sim_parameters.xacro  transmissions.xacro  walker.gazebo  walker.xacro
src/walker_gazebo/: CMakeLists.txt
src/walker_gazebo/launch/: walker_world.launch
src/walker_gazebo/worlds/: walker.world
(+1 files in other folders)
